[tool.poetry]
name = "proteomicsreportgen"
version = "0.1.0"
description = ""
authors = ["Toan Phung <toan.phungkhoiquoctoan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
patchworklib = "^0.4.7"
plotnine = "^0.9.0"
uniprotparser = "^1.0.8"
weasyprint = "^56.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

